--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>アプリ管理ダッシュボード</title>
+  <title>アプリ登録とJSONエクスポート</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -65,10 +65,6 @@
     }
     th {
       background-color: #f0f2f5;
-      cursor: pointer;
-    }
-    tr:hover {
-      background-color: #f9f9f9;
     }
     .action-buttons button {
       margin-right: 6px;
@@ -78,7 +74,7 @@
   </style>
 </head>
 <body>
-  <h1>アプリ管理ダッシュボード</h1>
+  <h1>アプリ管理（登録＋JSON書き出し）</h1>
   <form id="appForm">
     <label>アプリ名:</label>
     <input type="text" id="appName" required />
@@ -98,19 +94,22 @@
     <button type="submit">登録</button>
   </form>
 
-  <table id="appTable">
-    <thead>
-      <tr>
-        <th onclick="sortTable(0)">アプリ名</th>
-        <th onclick="sortTable(1)">説明</th>
-        <th>リンク</th>
-        <th onclick="sortTable(3)">作成日</th>
-        <th onclick="sortTable(4)">更新日</th>
-        <th>操作</th>
-      </tr>
-    </thead>
-    <tbody id="appTableBody"></tbody>
-  </table>
+  <div style="max-width: 1000px; margin: 0 auto;">
+    <button onclick="exportJSON()">📤 JSONファイルとして書き出し</button>
+    <table id="appTable">
+      <thead>
+        <tr>
+          <th>アプリ名</th>
+          <th>説明</th>
+          <th>リンク</th>
+          <th>作成日</th>
+          <th>更新日</th>
+          <th>操作</th>
+        </tr>
+      </thead>
+      <tbody id="appTableBody"></tbody>
+    </table>
+  </div>
 
   <script>
     const appForm = document.getElementById('appForm');
@@ -171,14 +170,14 @@
       renderTable();
     }
 
-    function sortTable(columnIndex) {
-      appData.sort((a, b) => {
-        const valA = Object.values(a)[columnIndex].toLowerCase();
-        const valB = Object.values(b)[columnIndex].toLowerCase();
-        return valA.localeCompare(valB);
-      });
-      localStorage.setItem('appList', JSON.stringify(appData));
-      renderTable();
+    function exportJSON() {
+      const blob = new Blob([JSON.stringify(appData, null, 2)], { type: 'application/json' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'apps.json';
+      a.click();
+      URL.revokeObjectURL(url);
     }
 
     renderTable();
