--- a/viewer.html
+++ b/viewer.html
@@ -3,65 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>アプリまとめビューア</title>
+  <title>アプリ一覧ビューア</title>
   <style>
     body {
       font-family: sans-serif;
       margin: 2rem;
-      background: #f9f9f9;
-    }
-    h1 {
-      margin-bottom: 1rem;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      margin-bottom: 2rem;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    input {
-      padding: 0.5rem;
-      font-size: 1rem;
+      background: #f5f5f5;
     }
     table {
       border-collapse: collapse;
       width: 100%;
       background: #fff;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+      box-shadow: 0 0 6px rgba(0,0,0,0.1);
     }
     th, td {
-      padding: 0.5rem;
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
+      padding: 0.75rem;
       text-align: left;
     }
     th {
-      cursor: pointer;
       background: #eee;
+      cursor: pointer;
     }
     img.qr {
       height: 60px;
-    }
-    .actions button {
-      margin-right: 0.5rem;
     }
   </style>
 </head>
 <body>
   <h1>アプリ一覧</h1>
-  <form id="appForm">
-    <input type="text" placeholder="アプリ名" id="name" required>
-    <input type="text" placeholder="説明" id="desc">
-    <input type="url" placeholder="URL" id="url" required>
-    <input type="date" id="created">
-    <input type="date" id="updated">
-    <input type="text" placeholder="QRコード画像ファイル名（省略可）" id="qr">
-    <button type="submit">追加</button>
-  </form>
-
   <table id="appTable">
     <thead>
       <tr>
@@ -71,26 +41,26 @@
         <th data-key="created">作成日</th>
         <th data-key="updated">更新日</th>
         <th>QR</th>
-        <th>操作</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script>
-    const form = document.getElementById("appForm");
-    const table = document.querySelector("#appTable tbody");
-    let data = JSON.parse(localStorage.getItem("apps") || "[]");
+    let data = [];
     let sortKey = null;
     let sortAsc = true;
 
-    function save() {
-      localStorage.setItem("apps", JSON.stringify(data));
+    async function loadData() {
+      const res = await fetch("apps.json");
+      data = await res.json();
+      render();
     }
 
     function render() {
-      table.innerHTML = "";
-      data.forEach((row, i) => {
+      const tbody = document.querySelector("#appTable tbody");
+      tbody.innerHTML = "";
+      data.forEach(row => {
         const tr = document.createElement("tr");
         tr.innerHTML = `
           <td>${row.name}</td>
@@ -98,51 +68,10 @@
           <td><a href="${row.url}" target="_blank">リンク</a></td>
           <td>${row.created || ""}</td>
           <td>${row.updated || ""}</td>
-          <td>${row.qr ? `<img class="qr" src="./${row.qr}" alt="QR">` : ""}</td>
-          <td class="actions">
-            <button onclick="edit(${i})">編集</button>
-            <button onclick="remove(${i})">削除</button>
-          </td>
+          <td>${row.qr ? `<img class='qr' src='./${row.qr}'>` : ""}</td>
         `;
-        table.appendChild(tr);
+        tbody.appendChild(tr);
       });
-    }
-
-    form.onsubmit = e => {
-      e.preventDefault();
-      const item = {
-        name: form.name.value,
-        desc: form.desc.value,
-        url: form.url.value,
-        created: form.created.value,
-        updated: form.updated.value,
-        qr: form.qr.value,
-      };
-      data.push(item);
-      save();
-      render();
-      form.reset();
-    };
-
-    function edit(i) {
-      const item = data[i];
-      form.name.value = item.name;
-      form.desc.value = item.desc;
-      form.url.value = item.url;
-      form.created.value = item.created;
-      form.updated.value = item.updated;
-      form.qr.value = item.qr;
-      data.splice(i, 1);
-      save();
-      render();
-    }
-
-    function remove(i) {
-      if (confirm("削除しますか？")) {
-        data.splice(i, 1);
-        save();
-        render();
-      }
     }
 
     document.querySelectorAll("th[data-key]").forEach(th => {
@@ -159,7 +88,7 @@
       };
     });
 
-    render();
+    loadData();
   </script>
 </body>
 </html>
